spacing fixed

--- a/sass/layout/_logos.scss
+++ b/sass/layout/_logos.scss
@@ -36,7 +36,7 @@
     margin-top: 81px;
   
     @media (max-width: 1024px) {
-      margin-top: 32px;
+      margin-top: 20px;
     }
   }
 
