--- a/style.css
+++ b/style.css
@@ -1723,7 +1723,7 @@ html {
 
 @media (max-width: 1024px) {
 	.logos .container + .container {
-		margin-top: 32px;
+		margin-top: 20px;
 	}
 }
 
